// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-form Renders \`storage-settings-form\` with custom form and history 1`] = `
<div
  class="layout column"
>
  <storage-settings-alarm-form-stub
    form="[object Object]"
    history="[object Object]"
  />
  <storage-settings-entity-disabled-form-stub />
  <storage-settings-entity-unlinked-form-stub
    form="[object Object]"
  />
  <storage-settings-entity-clean-form-stub />
  <storage-settings-remediation-form-stub
    form="[object Object]"
    history="1611220000"
  />
  <storage-settings-pbehavior-form-stub
    form="[object Object]"
    history="1611230000"
  />
  <storage-settings-junit-form-stub
    form="[object Object]"
    history="1611210000"
  />
  <storage-settings-health-check-form-stub
    form="[object Object]"
    history="1611240000"
  />
  <storage-settings-webhook-form-stub
    form="[object Object]"
    history="1611250000"
  />
  <storage-settings-metrics-form-stub
    form="[object Object]"
  />
  <storage-settings-perf-data-metrics-form-stub
    form="[object Object]"
  />
  <storage-settings-event-filter-failure-form-stub
    form="[object Object]"
  />
  <storage-settings-alarm-external-tag-form-stub
    form="[object Object]"
  />
  <storage-settings-events-records-form-stub
    form="[object Object]"
    history="1611320000"
  />
</div>
`;

exports[`storage-settings-form Renders \`storage-settings-form\` with default form 1`] = `
<div
  class="layout column"
>
  <storage-settings-alarm-form-stub
    form="[object Object]"
  />
  <storage-settings-entity-disabled-form-stub />
  <storage-settings-entity-unlinked-form-stub
    form="[object Object]"
  />
  <storage-settings-entity-clean-form-stub />
  <storage-settings-remediation-form-stub
    form="[object Object]"
  />
  <storage-settings-pbehavior-form-stub
    form="[object Object]"
  />
  <storage-settings-junit-form-stub
    form="[object Object]"
  />
  <storage-settings-health-check-form-stub
    form="[object Object]"
  />
  <storage-settings-webhook-form-stub
    form="[object Object]"
  />
  <storage-settings-metrics-form-stub
    form="[object Object]"
  />
  <storage-settings-perf-data-metrics-form-stub
    form="[object Object]"
  />
  <storage-settings-event-filter-failure-form-stub
    form="[object Object]"
  />
  <storage-settings-alarm-external-tag-form-stub
    form="[object Object]"
  />
  <storage-settings-events-records-form-stub
    form="[object Object]"
  />
</div>
`;
